1.0.6
--------------

- clarified in setup.py that license is MIT

1.0.5
--------------

- use pytest-2.4.2 node.add_marker() API for adding "pep8" marker

1.0.4
---------------------------------

- fix issue2:  make pep8 interoperate with --strict runs

1.0.3
----------------------------------------------

- added pep8maxlinelength ini setting to configure the maximum allowed
  line length.
- add tox.ini and test_pep8.py to distribution

1.0.2
----------------------------------------------

- fix a parsing bug - # is now recognized as
  as comment and ALL will now be recognized 
  even if other codes are specified (nonsensically)

1.0.1
----------------------------------------------

- add pytest-cache dep to setup.py

1.0
----------------------------------------------

- extend pep8ignore to allow lines of form
  "glob CODE1 CODE2", for example: "test/*.py W293 E203"
- speed up tests by preventing pep8 checking if 
  a file was unmodified after its last change.
- simplified pep8 checker usage (thanks flox)

0.9.1
----------------------------------------------

- fixed compatibility with pep8==1.3
- made pytest_pep8 source itself pep9 compliant

0.8
----------------------------------------------

- fix a bug with ignore option when the ignore count is higher than 
  the error count (thanks Tetsuya Morimoto)

0.7
----------------------------------------------

- change defaults and ini-file option name:
  now all pep8 checks are enabled and need to
  be explicitely ignored through a "pep8ignore" setting
  in the ini file.
  
0.6
----------------------------------------------

- initial release