@@ -1,5 +1,5 @@
 [tox]
-envlist=py25,py27,py27-pytesttrunk,py33,py-xdist
+envlist=py26,py27,py27-pytesttrunk,py33,py-xdist,py34
 
 [testenv]
 deps=pytest
