@@ -1,3 +1,11 @@
+xxx
+----------
+
+- fix tests to accomodate newer pep version which is more sensitive
+  to detecting "E265 too many spaces"
+
+- add py34 to tox.ini
+
 1.0.6
 --------------
 
